styles.css
body{
    padding:0;
    margin: 0;

    background-color:#ddf8fb;
    height:100vh;
    width:100vw;

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.container{
    display:grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 5fr;
    height:100vh;
}

/* header */
.header{
    position: sticky;
    top:0;
    grid-row: 1/2;
    grid-column: 2/3;
    background-color: #dbeafe;

    box-sizing: border-box;
    padding:15px;

    display: grid;
    grid-template-rows: 1fr 1.3fr;
    gap:7px;

    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.14);
    z-index:3
}

.upperHeader{
    grid-row: 1/2;

    display: grid;
    grid-template-columns: 1fr 10fr repeat(2, 1fr) 2fr;
    gap:1vw;
}

.upperHeader>svg{
    align-self: center;
    justify-self: end;
    height:30px;
    width:30px;
}

.upperHeader input{
    height:60%;
    border: none;
    background-color:rgb(189, 210, 255) ;
    border-radius: 40px;
    align-self: center;
    box-sizing: border-box;
    padding:10px;
}

input::placeholder{
    opacity: 60%;
    color: #082f49;
}

.upperHeader p{
    font-size: 18px;
    font-weight: 700;
    margin:0;
    align-self: center;
}


.upperHeader img{
    height:50px;
    width:50px;
    justify-self: center;
    align-self:center;
}

.lowerHeader{
    display:grid;
    grid-template-columns: 1fr 8fr repeat(3, 1fr);
    grid-template-rows:1fr 2fr;
    column-gap: 10px;

    margin-right: 25px;
}

.lowerHeader img{
    height:60px;
    width: 60px;
    grid-column: 1/2;
    grid-row:1/3;
    justify-self:right ;
}

.lowerHeader p{
    font-weight: 600;
    font-size: 14px;
    grid-column: 2/3;
    grid-row:1/2;
    margin:0;
    align-self: end;
}

.lowerHeader h4{
    grid-row:2/3;
    grid-column: 2/3;
    margin:0;
    font-size: 26px;
    align-self: start;
}

.lowerHeader button{
    grid-row:2/3;
    align-self:start ;
    box-sizing: border-box;
    width:100px;
    border-radius: 30px;
    padding:10px 20px;
    margin:0 10px;
    border: none;
    background-color:#075985;
    color: white;
    font-weight: 600;
}

button:hover{
    cursor: pointer;
    color:#075985;
    background-color: #eff6ff;
}

/* sidebar */
.sidebar{
    grid-row:1/3;
    grid-column: 1/2;
    background-color: #082f49;

    box-sizing:border-box;
    padding:15px;
    color:white;

    display: grid;
    grid-template-rows: 1fr 9fr;
    gap:30px;
}

.sidebar svg{
    stroke: yellowgreen;
    fill: yellowgreen;
}

.sidebar h3{
    padding:0;
    margin:0;
    font-size:26px;
    align-self: center;
}

.sidebar p{
    margin:0;
}

.sidebar p:hover{
    cursor: pointer;
    color:yellowgreen
}

.sidebar .logo{
    display: grid;
    grid-template:1fr/ 1fr 3fr;
    align-self: center;
}

.sidebarOptions svg{
    stroke:white;
    fill:white;
    height: 20px;
    width:20px;

    justify-self: center;
}

.mainContent{
    grid-row: 2/3;
    grid-column: 2/3;
}

.sidebarOptions{
    display: grid;
    grid-template-rows: 2fr 1fr 1fr;
    gap:5vh;
}

.sidebarOptions .upper{
    grid-row:1/2 ;

    display:grid;
    grid-template-columns: 1fr 3fr;
}

.sidebarOptions .lower{
    grid-row: 2/3;
    display: grid;
    grid-template-columns: 1fr 3fr;
}


/* mainContent */

.mainContent{
    padding:10px;
    display: grid;
    grid-template-columns: 2.5fr 1fr;
    gap:1rem;
}

.yourProjects{
    grid-row: 1/3;
    grid-column: 1/2;
}

.projectCards{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
    grid-auto-rows: 1fr;
    gap:1rem;
    overflow: auto;
}

.projectCards .card{
    border-left: 6px solid rgb(1, 1, 56);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
    padding:25px;
    background-color: white;
    border-radius: 0.5rem;

    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}


.mainContent h4,h5{
    padding:0;
    margin:0;
}
.mainContent h4{
    margin-bottom: 10px;
}

.projectCards svg{
    height:20px;
    width:20px;
}
.projectCards p{
    font-size: 12px;
    margin: 0;
    padding: 0;
}
.svgIcons{
    margin-top: px;
    justify-self: end;
    align-self:end;
    margin-top: 20px;
}
.svgIcons>svg{
    box-sizing: border-box;
    margin:0 10px;
}

/* annoucements  */
.anCards{
    background-color: white;
    border-radius: 15px;
    display: grid;
    grid-template-rows: min-content;
    row-gap: 12px;
    padding: 20px;
    margin-right:20px;
    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}
.anCards :last-child:last-child{
    border-bottom:none;
}
.anCards :last-child >p{
    
    margin-bottom: 0;
}
.anCard{
    display:grid;
    grid-template-rows: 2;
    border-bottom: 1px solid rgba(0, 0, 0, 0.259);
}
.anCard>p{
    margin-top:0;
    opacity: 50%;
    font-size: 12px;
    font-weight: 500;
}

/* trending  */
.tags{
    display:grid;
    grid-auto-rows: min-content;
    row-gap: 10px;
    box-sizing: border-box;
    padding:20px;
    background-color: white;
    border-radius: 15px;
    margin-right:20px;

    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
}

.tag{
    display: grid;
    grid-template-columns: max-content 2fr;
    grid-template-rows: 1fr 1fr;
    column-gap: 10px;
}

.tag>img{
    border-radius: 50%;
}

.tag>p{
    margin: 0;
    font-size: 14px;
    font-weight: 600;
}
.tag .lowerText{
    opacity: 50%;
    font-weight: 400;
    font-size: 12px;

}
.tag>img{
    grid-column: 1/2;
    grid-row: 1/3;
}

